    - Do not use old-style quotes.
  * Add new symbols file for the shared library.
  * Add a lintian override for shlib-calls-exit, as the library does call
    exit(3) by default, but makes it possible for the caller to setup a
    different error handler.
  * Fix typos in man pages.
  * Fix fortify compiler warnings.
  * Make the libpci-dev package Multi-Arch same. Closes: #721270

 -- Guillem Jover <guillem@debian.org>  Tue, 09 Apr 2019 05:36:49 +0200

pciutils (1:3.5.2-5) unstable; urgency=medium

  * Modify the upstream build system to recognize GNU style system names.
    This way we can upstream these changes, and avoid unwieldy mappings.

 -- Guillem Jover <guillem@debian.org>  Tue, 09 Apr 2019 05:02:49 +0200

pciutils (1:3.5.2-4) unstable; urgency=medium

  * Use expected system name for HOST variable.
    - Switch to use DEB_HOST_GNU_SYSTEM instead of DEB_HOST_ARCH_OS.
      This fixes the build failure on GNU/Hurd.
    - Map GNU/k*BSD OS names to their non k-prefixed names.
      This fixes the build failure on GNU/kFreeBSD.

 -- Guillem Jover <guillem@debian.org>  Mon, 08 Apr 2019 02:31:08 +0200

pciutils (1:3.5.2-3) unstable; urgency=medium

  * Pass HOST as a make variable instead of through the environment as the
    Makefile sets a default empty value. This makes the build reproducible.

 -- Guillem Jover <guillem@debian.org>  Sun, 07 Apr 2019 20:47:46 +0200

pciutils (1:3.5.2-2) unstable; urgency=medium

  * Salvage package. Closes: #923799, #925097
    Thanks to the previous maintainers for all their past work.
  * Add Vcs-Browser and Vcs-Git fields.
  * Update Homepage field URL. Closes: #893965
  * Update debian/copyright:
    - Remove original packaging information, present in the changelog.
    - Stop claiming the Linux kernel uses GPL-2+. Closes: #688680
    - Switch to machine parseable format 1.0.
    - Update copyright statements.
  * Add upstream signing key.
  * Update debian/watch:
    - Switch to format version 4.